# textractor-webhook

./: CMakeLists.txt  CMakeSettings.json  README.org  common.h  extension.cpp  network.h
server/: Cargo.toml  README.org
server/src/: lib.rs  main.rs  server.rs  websocket.rs
server/static/: index.html
server/static/js/: js.js
