[package]
name = "textractor_server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
actix-web = "4.1.0"
actix-web-actors = "4.1"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "fs"]}
serde = {version = "1.0.138", features = ["derive"]}
actix = "0.13.0"
actix-files = "0.6.2"

[[bin]]
name = "textractor_server"
path = "src/main.rs"

[lib]
name = "textractor_server"
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
